--- a/crates/corrosion/Cargo.toml
+++ b/crates/corrosion/Cargo.toml
@@ -62,4 +62,4 @@ build-info-build = { workspace = true }
 corro-tests = { path = "../corro-tests" }
 
 [features]
-running_in_antithesis = ["antithesis_sdk/full"]
+antithesis = ["antithesis_sdk/full"]
