--- a/.antithesis/config/docker-compose.yaml
+++ b/.antithesis/config/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
     image: corrosion:${SHORT_COMMIT}
     volumes:
       - ./volumes/corrosion1:/var/lib/corrosion
+    environment:
+    - RUST_LOG=corro=debug
 
   corrosion2:
     container_name: corrosion2
@@ -23,6 +25,8 @@ services:
     image: corrosion:${SHORT_COMMIT}
     volumes:
       - ./volumes/corrosion2:/var/lib/corrosion
+    environment:
+    - RUST_LOG=corro=debug
 
   corrosion3:
     container_name: corrosion3
@@ -30,6 +34,8 @@ services:
     image: corrosion:${SHORT_COMMIT}
     volumes:
       - ./volumes/corrosion3:/var/lib/corrosion 
+    environment:
+    - RUST_LOG=corro=debug
 
   corro-client:
     container_name: corro-client
