Add Windows x86_64 support for cr-sqlite extension
- Add crsqlite-win-x86_64.dll from vlcn-io/cr-sqlite v0.16.3
- Add Windows target configuration in sqlite.rs
- Also add macOS x86_64 support that was missing

--- a/crates/corrosion/Cargo.toml
+++ b/crates/corrosion/Cargo.toml
@@ -54,6 +54,8 @@ tripwire = { path = "../tripwire" }
 uuid = { workspace = true }
 shell-words = "1.1.0"
 metrics-util = { workspace = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
 libsystemd = "0.7.0"
 
 [build-dependencies]
