Make jemalloc allocator Unix-only for Windows compatibility
jemalloc doesn't compile on Windows. On Windows, use the default
system allocator instead.

--- a/crates/corrosion/Cargo.toml
+++ b/crates/corrosion/Cargo.toml
@@ -40,7 +40,6 @@ spawn = { path = "../spawn" }
 sqlite3-restore = { path = "../sqlite3-restore" }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
-tikv-jemallocator = "0.5"
 time = { workspace = true }
 tokio = { workspace = true }
 tokio-metrics = { workspace = true }
@@ -57,6 +56,9 @@ metrics-util = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libsystemd = "0.7.0"
+
+[target.'cfg(unix)'.dependencies]
+tikv-jemallocator = "0.5"
 
 [build-dependencies]
 build-info-build = { workspace = true }
