--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ tracing-opentelemetry = { version = "0.31.0", default-features = false, features
 tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
 tracing-test = "0.2"
 thread_local = "1.1.9"
-uhlc = { version = "0.7", features = ["defmt"] }
+uhlc = { version = "0.7" }
 uuid = { version = "1.3.1", features = ["v4", "serde"] }
 webpki = { version = "0.22.0", default-features = false, features = ["std"] }
 
